--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,12 +1,10 @@
-
-
 /* CARD SECTION */
 
 .card-section{
     width: 100%;
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
     gap: 1rem;
 }
