--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -4,7 +4,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #000;
+    background-color: #121212;
+    opacity: 0;
 }
 
 .footer-text{
