--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -12,7 +12,7 @@
     margin: 1rem;
     width: 380px;
     position: relative;
-    box-shadow: 0 2px 7px #999;
+    box-shadow: 0 2px 7px #ffff00;
     border-radius: .3rem;
     /* background: rgba(250, 250, 250, 1); */
 }
