--- a/src/styles/Inicio.css
+++ b/src/styles/Inicio.css
@@ -1,4 +1,12 @@
-.inicio__section{
+.title__section__card{
+    margin: 2rem;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+ /* HERO SECTION */
+
+.hero__section{
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -18,11 +26,39 @@
     color: #fff;
 }
 
+/* NEW PRODUCT SECTION */
+
+.new__product__section{
+    margin: 2rem 1rem;
+}
+
+.new__product__section::before{
+    content: '';
+    display: block;
+    width: 50%;
+    margin: 0 auto;
+    border-top: 1px solid #fff;
+}
+
+/* IMPORTANT PRODUCT SECTION */
+
+.important__product__section{
+    margin: 2rem 1rem;
+}
+
+.important__product__section::before,
+.important__product__section::after{
+    content: '';
+    display: block;
+    width: 50%;
+    margin: 0 auto;
+    border-top: 1px solid #fff;
+}
+
 /* SECTION EMPRESA */
 
-.empresa__container{
-    width: 100%;
-    margin: 4rem 0;
+.empresa__section{
+    margin: 2rem 1rem;
     display: flex;
     gap: 1rem;
 }
@@ -42,7 +78,7 @@
 
 @media (max-width: 768px){
 
-.empresa__container{
+.empresa__section{
     flex-direction: column;
 }
 
