--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -12,7 +12,7 @@
     margin: 1rem;
     width: 380px;
     position: relative;
-    box-shadow: 0 2px 7px #ffff00;
+    box-shadow: 0 2px 7px #3483fa;
     border-radius: .3rem;
     /* background: rgba(250, 250, 250, 1); */
 }
@@ -23,7 +23,8 @@
     justify-content: center;
     height: 300px;
     padding: 50px;
-    /* background: #f0f0f0; */
+    border-radius: .3rem;
+    background: #f0f0f0;
 }
 
 .product__tumb img{
@@ -40,7 +41,7 @@
     font-size: 12px;
     font-weight: 700;
     text-transform: uppercase;
-    color: #ccc;
+    color: #3483fa;
     margin-bottom: 18px;
 }
 
