--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -80,7 +80,9 @@
 }
 
 .product__links{
-    text-align: right;
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-end;
 }
 
 .product__links a{
