Handling reducer functions by changing the location of the add to cart functions to the catalog component. Add a new link to the navbar called cart so that the user can easily see their cart

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -96,3 +96,12 @@
 .product__links a:hover{
     color: #999;
 }
+
+.product__links span{
+    cursor: pointer;
+    transition: 0.3s all ease-in-out;
+}
+
+.product__links span:hover{
+    color: #999;
+}
