--- a/src/styles/ShoppingCart.css
+++ b/src/styles/ShoppingCart.css
@@ -76,3 +76,40 @@
 .cart-items-remove:active{
     transform: translateY(1.2px);
 }
+
+.cart-items-total-price-name{
+    display: flex;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 22%;
+    font-size: 20px;
+    font-weight: 700;
+    border-top: 2px solid black;
+}
+
+.cart-items-total-price{
+    display: flex;
+    padding-left: 45%;
+}
+
+.clear-cart{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+.clear-cart-button{
+    border: none;
+    border-radius: 5px;
+    background-color: #bd0e0e;
+    height: 30px;
+    width: 100px;
+    font-size: 18px;
+    color: white;
+    cursor: pointer;
+}
+
+.clean-cart-button:hover{
+    background-color: #0e557e;
+}
