The cart is finished for the web version only in the styles. I removed one of the new products from the home page because the wrap placed it in the wrong place. Place a pop-up every time a product is added to the cart and a counter next to the navigation bar where it says cart. I did the latter for both the web version and the responsive mobile

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -60,3 +60,22 @@
 }
 
 }
+
+.cart-length{
+    margin: -18px;
+    margin-bottom: 5px;
+    font-size: .6em;
+    padding: .3rem;
+    border-radius: 50%;
+    color: #3483fa;
+    font-weight: 700;
+}
+
+.cart-length-mobile{
+    margin: -50px 0 0 70px;
+    font-size: 1em;
+    padding: .3rem;
+    border-radius: 50%;
+    color: #3483fa;
+    font-weight: 700;
+}
