--- a/src/styles/ShoppingCart.css
+++ b/src/styles/ShoppingCart.css
@@ -1,47 +1,47 @@
 .cart-items{
-    margin: 30px auto;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 2px 7px #3483fa;
+    margin: 1.8rem auto;
     width: 50%;
-    background-color: orange;
-    border: 2px solid black;
-    border-radius: 5px;
-
+    border-radius: 0.3rem;
+    align-items: center;
 }
 
-.cart-item-header{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-size: 20px;
-    height: 50px;
-    border-bottom: 2px solid black;
+.cart-items-header{
+    padding: 2rem 3rem;
+    font-size: 1.25rem;
+    height: 3rem;
 }
 
 .cart-items-empty{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 18px;
-    font-weight: 700;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    font-size: 1rem;
+    padding: 1.25rem 0;
 }
 
-.cart-items-image{
-    width: 100px;
-    height: auto;
-    border: 2px solid black;
-    margin-right: 10px;
+.cart-items-container{
+    display: flex;
+    justify-content: space-between;
 }
 
 .cart-items-list{
     display: flex;
+    flex: 50%;
     align-items: center;
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-bottom: 20px;
-    font-size: 20px;
-    font-weight: 700;
+    padding: 1.25rem;
+    font-size: 1.25rem;
     margin-left: 5%;
+}
+
+.cart-items-image{
+    width: 6.25rem;
+    height: auto;
+    background-color: #fff;
+    border-radius: .3rem;
+    margin-right: 0.6rem;
 }
 
 .cart-items-name,
@@ -49,24 +49,37 @@
     width: 25%;
 }
 
+.cart-items-function{
+    flex:50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.cart-items-btn{
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    align-items: center;
+}
+
 .cart-items-add,
 .cart-items-remove{
-    width: 30px;
-    margin-right: 15px;
-    font-weight: 700;
+    width: 1.8rem;
     border: none;
-    border-radius: 3px;
-    font-size:  18px;
+    border-radius: 0.1rem;
+    font-size:  1.1rem;
     color: white;
     cursor: pointer;
 }
 
 .cart-items-add{
-    background-color: red;
+    color: #fff;
+    background-color: #3483fa;
 }
 
 .cart-items-remove{
-    background-color: green;
+    color: #3483fa;
+    background-color: #4189e626;
 }
 
 .cart-items-add:active{
@@ -77,39 +90,48 @@
     transform: translateY(1.2px);
 }
 
-.cart-items-total-price-name{
-    display: flex;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 22%;
-    font-size: 20px;
-    font-weight: 700;
-    border-top: 2px solid black;
-}
-
 .cart-items-total-price{
     display: flex;
-    padding-left: 45%;
+    align-items: center;
+    padding: 1.25rem 0;
+    font-size: 1.25rem;
+    justify-content: space-around;
+    gap: 1rem;
+}
+
+.cart-actions{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 2rem;
 }
 
 .clear-cart{
     display: flex;
     justify-content: flex-end;
-    margin-top: 10px;
-    margin-right: 10px;
 }
 
-.clear-cart-button{
+.clear-cart-button, .buy-cart-button{
     border: none;
-    border-radius: 5px;
-    background-color: #bd0e0e;
-    height: 30px;
-    width: 100px;
-    font-size: 18px;
-    color: white;
+    border-radius: 0.3rem;
+    font-size: 1.1rem;
     cursor: pointer;
+    padding: .5rem 2rem;
+
+}
+.clear-cart-button{
+    color: #3483fa;
+    background-color: #4189e626;
 }
 
-.clean-cart-button:hover{
-    background-color: #0e557e;
+.buy-cart-button{
+    color: #fff;
+    background-color: #3483fa;
+}
+
+.clear-cart-button:hover{
+    background-color: #4189e61e;
+}
+.buy-cart-button:hover{
+    background-color: #5396fa;
 }
