--- a/src/styles/ShoppingCart.css
+++ b/src/styles/ShoppingCart.css
@@ -1,3 +1,8 @@
+.shopping-cart-container{
+    height: 100vh;
+    overflow: hidden;
+}
+
 .cart-items{
     display: flex;
     flex-direction: column;
@@ -34,6 +39,7 @@
     padding: 1.25rem;
     font-size: 1.25rem;
     margin-left: 5%;
+    gap: 2rem;
 }
 
 .cart-items-image{
@@ -135,3 +141,46 @@
 .buy-cart-button:hover{
     background-color: #5396fa;
 }
+
+
+@media (max-width: 1023px){
+
+    .cart-items{
+        width: 50%;
+    }
+
+    .cart-items-container{
+        flex-direction: column;
+        gap: 1rem;
+        align-items: center;
+    }
+
+    .cart-container{
+        display: flex;
+        gap: 2rem;
+        flex-direction: column;
+        padding: 2rem 0;
+    }
+    
+    .cart-items-function {
+        flex: 50% 1;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        gap: 1rem;
+        flex-direction: column-reverse;
+    }
+
+    .cart-actions{
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+
+    }
+
+    @media (max-width: 599px){
+        .cart-items{
+            width: 80%;
+        }
+    }
