--- a/src/styles/ShoppingCart.css
+++ b/src/styles/ShoppingCart.css
@@ -20,11 +20,10 @@
 }
 
 .cart-items-empty{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
     font-size: 1rem;
     padding: 1.25rem 0;
+    margin-top: 1rem;
 }
 
 .cart-items-container{
