--- a/src/styles/CardHero.css
+++ b/src/styles/CardHero.css
@@ -62,7 +62,7 @@
     color: #eee;
     float: left;
 }
-.container .details button{
+.container .details a{
     background: rgba(0, 0, 0, .3);
     color: #eee;
     border: none;
@@ -78,7 +78,7 @@
     transition: .3s all ease-in-out;
 }
 
-.container .details button:hover{
+.container .details a:hover{
     background: rgba(0, 0, 0, .7);
     color: #fff;
 }
