In the end I gave functionality to the sliders. I was looking at the manifest to update it and gave some basic styles to the information sections

--- a/src/styles/Contacto.css
+++ b/src/styles/Contacto.css
@@ -1,13 +1,13 @@
-.condiciones-section{
+.contacto-section{
   height: 100vh;
 }
-.condiciones-div-principal{
+.contacto-div-principal{
   padding: 3rem 2rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
   justify-content: space-between;
 }
-.condiciones-descripcion{
+.contacto-descripcion{
   line-height: 1.5rem;
 }
