Thanks to OpenAI finalize the content of the information pages. This is a preventative push since Im doing all these finishing touches FROM MY PHONE. Now Im going to modify the conditions page to make it similar to the conditions of the wholesaler Zetronic. The same with shipping. Finally I am going to fix the css of the shopping cart since it has problems in the flex and the page would already be complete

--- a/src/styles/Contacto.css
+++ b/src/styles/Contacto.css
@@ -11,3 +11,16 @@
 .contacto-descripcion{
   line-height: 1.5rem;
 }
+
+.contacto-iconos{
+  display: flex;
+  gap: 1rem;
+  justify-content: space-around;
+}
+.contacto-iconos a{
+  text-decoration: none;
+  color: #fff;
+}
+.icon{
+  font-size: 2rem;
+}
