--- a/src/styles/CardHero.css
+++ b/src/styles/CardHero.css
@@ -49,14 +49,12 @@
 
 .container .details p{
     max-width: 85%;
-    margin-left: 15%;
     color: #eee;
     font-size: 15px;
-    margin-bottom: 36px;
 }
 
 .container .details h3{
-    margin: 0;
+    margin: 15px 0;
     padding: 0;
     font-size: 2.5em;
     color: #eee;
@@ -68,13 +66,12 @@
     border: none;
     outline: none;
     padding: 15px 20px;
-    margin-top: 5px;
-    font-size: 16px;
+    margin-top: 15px;
     letter-spacing: 1px;
     text-transform: uppercase;
     font-weight: 600;
     border-radius: 40px;
-    float: right;
+    float: left;
     transition: .3s all ease-in-out;
 }
 
