--- a/src/styles/SliderCards.css
+++ b/src/styles/SliderCards.css
@@ -6,8 +6,8 @@
     height: 100%;
     overflow: hidden;
     background-color: rgba(0, 0, 0, .3);
-    border: 2px solid #000;
     border-radius: .3rem;
+    box-shadow: 0 2px 7px #3483fa;
 }
 
 .slick-slide > div{
@@ -17,7 +17,9 @@
 .slick-list{
     margin: 0 -10px;
 }
-
+.card__top{
+    background-color: #fff;
+}
 .card__top img{
     width: 120px;
     margin: 0 auto;
