--- a/src/styles/Empresa.css
+++ b/src/styles/Empresa.css
@@ -13,9 +13,10 @@
   margin: 0 15px;
 }
 .foto-perfil{
-  height: 600px;
-  width: 480px;
+  height: 640px;
+  width: 360px;
   float: right;
+  border-radius: 15px;
 }
 .fotos-empresa{
   display: flex;
@@ -23,20 +24,21 @@
   flex-wrap: wrap
 }
 .foto-empresa{
-  height: 700px;
-  width: 500px;
+  height: 640px;
+  width: 360px;
+  border-radius: 15px;
 }
 @media (max-width: 599px){
   .foto-perfil{
-    height: 250px;
-    width: 200px;
+    height: 426px;
+    width: 240px;
     margin: 15px auto;
     display: block;
     float: none;
   }
   .foto-empresa{
-    height: 500px;
-    width: 300px;
+    height: 426px;
+    width: 240px;
     margin: 0 auto;
   }
 
